[tool.poetry]
name = "ava"
version = "0.1.0"
description = ""
authors = ["Einenlum <yann.rabiller@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
